2007-09-23  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.pas (ClearKeys):
	new procedure

	* avatar.c (avt_say):
	fix: check cursor position before any character is printed
	(fixes bug introduced in 0.13.1)
	
	* avatar.c (avt_say, avt_ask):
	fix: off-by-one error fixes

        * akfavatar.pas (fpc_io_read, gpc_io_read):
	fix: clear keyboard buffer

	* akfavatar.h, avatar.c (avt_viewport):
	new function

	* akfavatar.h, avatar.c (avt_bell, avt_flash):
	new functions

	* akfavatar.pas (beep, flash):
	new procedures

	* akfavatar.pas (initializeAvatar):
	always try to initialize the audio system
	
	* avatar.c (avt_say, avt_ask):
	support avt_bell

	* avatar-audio.c (avt_initialize_audio, avt_quit_audio):
	register audio sound with bell function
	(short_audio_sound): new function
	
	* separate compilation of the font
	
	* avatar.c (avt_drawchar):
	fix: font-rendering for QVGA fixed

2007-09-14  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.14.0 released

	* reorganized creation of binary-packages
	
	* link directly to SDL on Windows and Mac

2007-09-07  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_stop_on_esc):
	new function

	* akfavatar.h, avatar.c (avt_set_delays):
	new function
	dodelay: variable removed

	* avatarsay.c (keyhandler): new function

	* avatar.c (avt_analyze_event):
	don't check for the Esc key or space key
	these have to be handled externally

	* akfavatar.h, avatar.c (avt_reset_status): removed
	(avt_set_status): new function

	* avatar.pas renamed to akfavatar.pas

	* akfavatar.pas:
	no need to link to SDL or pthread directly

	* akfavatar.h, avatar.c (avt_register_keyhandler):
	new function

	* avatar.c (avt_analyze_event):
	support for external keyhandler
	
	* akfavatar.pas:
	support for writing to TextAttr
	support for KeyPressed, ReadKey
	support for CheckBreak
	support for CheckEsc
	dummys for CheckEof, CheckSnow, DirectVideo
	dummy for Sound
